Changes for Chromium LDB - Shayan